# moodlook

./: .gitignore  DEPLOYMENT.md  README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  api.js
client/src/components/: DemoModeToggle.jsx  Header.jsx  LookPreview.jsx  MaskPreviewGrid.jsx  MoodSelector.jsx  ProductRecommendations.jsx  RecommendationPanel.jsx  (+3 more)
precip_nowcasting/: .gitignore  Dockerfile  README.md  THIRD_PARTY.md  audit_data.py  audit_submission.py  evaluate_lolo.py  evaluate_oof.py  fit_ensemble.py  predict.py  preprocess_test.py  preprocess_train.py  pyproject.toml  requirements.txt  screen_experiment.py  train.py
precip_nowcasting/configs/: base.yaml  latest_unet.yaml  masked_future_smoke.yaml  masked_temporal.yaml  masked_temporal_balanced.yaml  masked_temporal_future.yaml  masked_temporal_smoke.yaml  pretrained_resnet18.yaml  smoke.yaml  spectral_capacity_smoke.yaml  spectral_motion.yaml  spectral_motion_aux.yaml  spectral_simvp.yaml  spectral_smoke.yaml  temporal_wide.yaml
precip_nowcasting/nowcasting/: __init__.py  cache.py  config.py  dataset.py  experiments.py  io.py  metrics.py  models.py  prediction.py  preprocess.py  splits.py  submission.py  training.py
precip_nowcasting/tests/: test_archive_contract.py  test_core.py  test_metrics.py  test_splits.py
server/: .env.example  app.js  index.js  package-lock.json  package.json
server/middleware/: upload.js
server/routes/: products.js  skinAnalysis.js  virtualTryOn.js
server/services/: cloudinaryService.js  perfectCorpService.js
(+6 files in other folders)
