[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solafune-precip-nowcasting"
version = "0.1.0"
description = "Reproducible satellite precipitation nowcasting pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "PyYAML>=6.0,<7",
  "rasterio>=1.3,<2",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "tqdm>=4.66,<5",
]

[tool.setuptools]
packages = ["nowcasting"]
